Upgrade thrift to 0.8.0, closes #3.

--- a/src/main/assemblies/plugin.xml
+++ b/src/main/assemblies/plugin.xml
@@ -20,6 +20,8 @@
             <useTransitiveFiltering>true</useTransitiveFiltering>
             <includes>
                 <include>org.apache.thrift:libthrift</include>
+                <include>org.slf4j:slf4j-api</include>
+                <include>org.slf4j:slf4j-log4j12</include>
             </includes>
         </dependencySet>
     </dependencySets>
