--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
 
     <repositories>
         <repository>
+            <id>sonatype</id>
+            <url>http://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+        <repository>
             <id>oss.sonatype.org</id>
             <name>OSS Sonatype</name>
             <url>http://oss.sonatype.org/content/repositories/releases/</url>
