--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.elasticsearch</groupId>
     <artifactId>elasticsearch-transport-thrift</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>2.0.0.RC1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>Thrift transport for ElasticSearch</description>
     <inceptionYear>2009</inceptionYear>
@@ -31,7 +31,7 @@
     </parent>
 
     <properties>
-        <elasticsearch.version>0.90.10</elasticsearch.version>
+        <elasticsearch.version>1.0.0.RC1-SNAPSHOT</elasticsearch.version>
         <lucene.version>4.6.0</lucene.version>
         <tests.output>onerror</tests.output>
         <tests.jvms>1</tests.jvms>
