--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.elasticsearch</groupId>
     <artifactId>elasticsearch-transport-thrift</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0.RC2</version>
     <packaging>jar</packaging>
     <description>Thrift transport for ElasticSearch</description>
     <inceptionYear>2009</inceptionYear>
@@ -31,8 +31,8 @@
     </parent>
 
     <properties>
-        <elasticsearch.version>1.0.0.RC1</elasticsearch.version>
-        <lucene.version>4.6.0</lucene.version>
+        <elasticsearch.version>1.0.0.RC2</elasticsearch.version>
+        <lucene.version>4.6.1</lucene.version>
         <tests.output>onerror</tests.output>
         <tests.jvms>1</tests.jvms>
         <tests.shuffle>true</tests.shuffle>
