--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.elasticsearch</groupId>
     <artifactId>elasticsearch-transport-thrift</artifactId>
-    <version>2.0.0.RC2</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <description>Thrift transport for ElasticSearch</description>
+    <description>Thrift transport for Elasticsearch</description>
     <inceptionYear>2009</inceptionYear>
     <licenses>
         <license>
