--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <name>elasticsearch-transport-thrift</name>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.elasticsearch</groupId>
     <artifactId>elasticsearch-transport-thrift</artifactId>
     <version>1.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <description>Thrift transport for ElasticSearch</description>
+    <name>Elasticsearch Thrift transport plugin</name>
+    <description>The thrift transport plugin allows to use the REST interface over thrift on top of HTTP.</description>
+    <url>https://github.com/elasticsearch/elasticsearch-transport-thrift/</url>
     <inceptionYear>2009</inceptionYear>
     <licenses>
         <license>
