--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <tests.output>onerror</tests.output>
         <tests.client.ratio></tests.client.ratio>
         <tests.jvm.argline></tests.jvm.argline>
+        <es.plugin.port>9500</es.plugin.port>
         <es.logger.level>INFO</es.logger.level>
     </properties>
 
@@ -142,6 +143,24 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
