--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
     </parent>
 
     <properties>
-        <elasticsearch.version>1.3.0-SNAPSHOT</elasticsearch.version>
-        <lucene.version>4.8.1</lucene.version>
+        <elasticsearch.version>1.3.0</elasticsearch.version>
+        <lucene.version>4.9.0</lucene.version>
         <tests.shuffle>true</tests.shuffle>
         <tests.output>onerror</tests.output>
         <tests.client.ratio></tests.client.ratio>
