Depend on elasticsearch-parent
To simplify plugins maintenance and provide more value in the future, we are starting to build an `elasticsearch-parent` project.
This commit is the first step for this plugin to depend on this new `pom` maven project.

(cherry picked from commit 6d7238f)

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
+/data
+/work
+/logs
 /.idea
 /target
 .DS_Store
 *.iml
 /.project
-/.classpath
 /.settings
-data
-.local-execution-hints.log
+/.classpath
 /plugin_tools
+/.local-execution-hints.log
+/.local-*-execution-hints.log
