--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
     </parent>
 
     <properties>
-        <elasticsearch.version>1.4.0</elasticsearch.version>
-        <lucene.version>4.10.2</lucene.version>
+        <elasticsearch.version>1.4.3-SNAPSHOT</elasticsearch.version>
+        <lucene.version>4.10.3</lucene.version>
         <tests.shuffle>true</tests.shuffle>
         <tests.output>onerror</tests.output>
         <tests.client.ratio></tests.client.ratio>
