--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
     <name>Elasticsearch Thrift transport plugin</name>
     <description>The thrift transport plugin allows to use the REST interface over thrift on top of HTTP.</description>
-    <url>https://github.com/elasticsearch/elasticsearch-transport-thrift/</url>
+    <url>https://github.com/elastic/elasticsearch-transport-thrift/</url>
     <inceptionYear>2009</inceptionYear>
     <licenses>
         <license>
@@ -19,10 +19,9 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:git@github.com:elasticsearch/elasticsearch-transport-thrift.git</connection>
-        <developerConnection>scm:git:git@github.com:elasticsearch/elasticsearch-transport-thrift.git
-        </developerConnection>
-        <url>http://github.com/elasticsearch/elasticsearch-transport-thrift</url>
+        <connection>scm:git:git@github.com:elastic/elasticsearch-transport-thrift.git</connection>
+        <developerConnection>scm:git:git@github.com:elastic/elasticsearch-transport-thrift.git</developerConnection>
+        <url>http://github.com/elastic/elasticsearch-transport-thrift</url>
     </scm>
 
     <parent>
