enable security manager in tests

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
     <properties>
         <es.plugin.port>9500</es.plugin.port>
+        <tests.security.manager>true</tests.security.manager>
     </properties>
 
     <dependencies>
