--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.elasticsearch</groupId>
     <artifactId>elasticsearch-transport-thrift</artifactId>
-    <version>2.6.0-SNAPSHOT</version>
+    <version>2.6.0</version>
     <packaging>jar</packaging>
     <name>Elasticsearch Thrift transport plugin</name>
     <description>The thrift transport plugin allows to use the REST interface over thrift on top of HTTP.</description>
